--- a/app/assets/stylesheets/books.scss
+++ b/app/assets/stylesheets/books.scss
@@ -1,3 +1,24 @@
 // Place all the styles related to the books controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+table{
+  border-spacing: 10px;
+}
+
+body{
+  margin-left: 10px;
+}
+
+td{
+  font-size:13px;
+}
+
+.errors{
+  margin-left: 10px;
+}
