--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,8 +1,17 @@
+
+<body>
 <h1>Editing Book</h1>
 <%= form_with model:@book do |f| %>
  <h4>Title</h4>
  <%= f.text_field :title %>
  <h4>Body</h4>
  <%= f.text_area :body %>
- <%= f.submit 'Update Book' %>
-<% end %>
+ <div>
+　<%= f.submit 'Update Book' %>
+ </div>
+　<% end %>
+<p>
+ <%= link_to "Show", book_path(@book.id) %>
+ |
+ <%= link_to "Back", books_path(@book.id) %>
+</body>
