--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,34 +1,39 @@
+
 <h1>Books</h1>
-<% @books.each do |book| %>
-
 <table>
-<thead>
+  <thead>
     <tr>
-        <th>Title</th>
-        <th>Body</th>
-        <th colspan='3'></th>
+      <th>Title</th>
+      <th>Body</th>
+      <th colspan='3'></th>
     </tr>
-</thead>
-<tbody>
+  </thead>
+  <tbody>
+    <% @books.each do |book| %>
     <tr>
-        <td><%= book.title %></td>
-        <td><%= book.body %></td>
-        <td>show</td>
-        <td>Edit</td>
-        <td>Distroy</td>
+      <td><%= book.title %></td>
+      <td><%= book.body %></td>
+      <td>
+        <%= link_to "Show", book_path(book), class: "show_#{book.id}" %>
+        <%= link_to "Edit", edit_book_path(book), class: "edit_#{book.id}" %>
+        <%= link_to "Destroy", book_path(book), method: :delete, "data-confirm" => "Are you sure?" %>
+      </td>
     </tr>
-</tbody>
-</tabel>
-<% end %>
+    <% end %>
+  </tbody>
+</table>
 
-<h2><strong>New Book</strong></h2>
+<div class="new">
+<h2>New Book</h2>
 <%= form_with model: Book.new do |f| %>
- <h4>Title</h4>
- <%= f.text_field :title %>
+  <h4>Title</h4>
+  <%= f.text_field :title %>
 
- <h4>body</h4>
- <%= f.text_area :body %>
+  <h4>Body</h4>
+  <%= f.text_area :body %>
 
- <%= f.submit 'Create Book' %>
+ <div><%= f.submit 'Create Book' %></div>
+<% end %>
+</div>
 
- <% end %>
+</body>
