--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,23 +1,26 @@
 
-<h1><strong>Books</strong></h1>
-<table>
-<thead>
- <tr>
- <th>Title</th>
-  <th>Body</th>
-  <th colspan="3"></th>
- </tr>
-</thead>
-</table>
+<body>
+<h2>New Book</h2>
+<% if @book.errors.any? %>
+ <%= @book.errors.count %>件のエラーが発生しました。
+ <ul>
+  <% @book.errors.full_messages.each do |message| %>
+   <li><%= message %></li>
+  <% end %>
+ </ul>
+<% end %>
 
 
-<h2><strong>New Book</strong></h2>
 <%= form_with model: Book.new do |f| %>
  <h4>Title</h4>
  <%= f.text_field :title %>
 
  <h4>本文</h4>
  <%= f.text_area :body %>
-
- <%= f.submit 'Create Book' %>
+<div><%= f.submit 'Create Book' %>
+</div>
  <% end %>
+ </div>
+ </body>
+ 
+
