--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -10,14 +10,13 @@
  </ul>
 <% end %>
 
-
 <%= form_with model: Book.new do |f| %>
  <h4>Title</h4>
  <%= f.text_field :title %>
 
  <h4>本文</h4>
  <%= f.text_area :body %>
-<div><%= f.submit 'Create Book' %>
+<div><%= f.submit 'Update Book' %>
 </div>
  <% end %>
  </div>
