--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,12 +1,29 @@
+<% if @book.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@book.errors.count, "error") %> prohibited this book from being saved:</h2>
+      <ul>
+        <% @book.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+      </ul>
+    </div>
+<% end %>
 
 <body>
+ <% if flash[:notice] %>
+     <p id="notice">
+       <%= flash[:notice] %>
+     </p>
+   <% end %>
+
+
 <p>title:<span><%= @book.title %></span></p>
 <p>body：<span><%= @book.body %></span></p>
 
 <p>
 <%= link_to "Edit", edit_book_path(@book.id) %>
 |
-<%= link_to "Back", books_path(@book.id) %>
+<%= link_to "Back", books_path %>
 </p>
 
 </body>
